Исправлена очистка терминала перед новой итерацией в Linux